Remove old code. #2